<resources>
    <string name="app_name">MasterDetail</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_create">Crear usuario</string>
    <string name="text_new">Nuevo usuario</string>
    <string name="text_newreg">Nuevo usuario? Registrese</string>
    <string name="hint_user">Ingrese usuario</string>
    <string name="hint_password">Ingrese contraseña</string>
    <string name="text_hello">Listado de productos</string>
    <string name="text_hello2">Hola %1$s</string>
    <string name="text_list">Estos son los pañales disponibles</string>
    <string name="msg_empty">Campo de usuario vacío</string>
    <string name="msg_complete">Debe completar ambos campos</string>
    <string name="msg_wronguser">El usuario no existe</string>
    <string name="msg_wrongpassword">Contraseña incorrecta</string>
    <string name="msg_userexist">El usuario ya existe</string>
    <string name="msg_usercreated">Usuario creado exitosamente</string>
    <string name="btn_return">Volver</string>
    <string name="txt_detail_id">Id</string>
    <string name="txt_detail_brand">Marca</string>
    <string name="txt_detail_pres">Presentación</string>
    <string name="txt_detail_price">Precio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola a todos</string>
</resources>